--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,11 @@ url: https://nstauder2.github.io # the base hostname & protocol for your site, e
 linkedin_username:  daniela-lopez-vives-52591293
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
   - jekyll-polyglot
+  - jekyll-remote-theme
 
 
 languages: ["en", "es"]
