--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,10 @@ url: https://nstauder2.github.io # the base hostname & protocol for your site, e
 linkedin_username:  daniela-lopez-vives-52591293
 
 # Build settings
-remote_theme: jekyll/minima
+theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-polyglot
-  - jekyll-remote-theme
+  - jekyll-polyglots
 
 
 languages: ["en", "es"]
